<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.gallery.GalleryFragment">


    <Spinner
        android:id="@+id/spnNrRate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="486dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="336dp"
        android:layout_marginBottom="555dp"
        android:text="@string/nr_rate"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/edtSalariu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="168dp"
        android:layout_marginBottom="407dp"
        android:ems="10"
        android:hint="@string/salariu"
        android:inputType="textPersonName" />


    <SeekBar
        android:id="@+id/skbCredit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="350dp"
        android:max="10000"
        android:min="1"
        android:minHeight="5dp" />



    <TextView
        android:id="@+id/seekText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="308dp"
        android:layout_marginBottom="310dp"
        android:text="" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="318dp"
        android:layout_marginBottom="461dp"
        android:text="@string/salariu"
        android:textStyle="bold"

        />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="107dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="290dp"
        android:layout_marginBottom="375dp"
        android:text="@string/valoare_credit"
        android:textStyle="bold"


        />

    <Button
        android:id="@+id/btnCalculeaza"
        android:layout_width="290dp"
        android:layout_height="59dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="227dp"
        android:text="Calculeaza rata" />


</RelativeLayout>